Bug 364838 - Folders are ignored in the exclude list of Synchronizer
Summary: Folders are ignored in the exclude list of Synchronizer
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: synchronize (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-28 03:41 UTC by Prashant
Modified: 2020-07-01 21:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Prashant 2016-06-28 03:41:33 UTC
When I add a folder with spaces in the name to the Exclude list of Synchronize Directories, the folder is ignored during Compare.

Reproducible: Always

Steps to Reproduce:
1. Select Synchronize Directories
2. Click on the General Tab
3. Add a folder with spaces in the name to the Do not search in list
4. Click on Compare

Actual Results:  
The folder specified is ignored. Folders without spaces are taken into account

Expected Results:  
Folders with spaces in the name should also be excluded
Comment 1 Davide Gianforte 2020-05-01 23:01:29 UTC
On a recent version, it seems that all excluded folder are ignored, can you confirm?

Thanks
Comment 2 Toni Asensi Esteve 2020-06-20 12:51:19 UTC
Thanks, Davide. While the bug reporter answers: I can state that in the tests that I performed all excluded folders were ignored.
Comment 3 Bug Janitor Service 2020-06-20 13:21:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/15
Comment 4 Toni Asensi Esteve 2020-07-01 21:34:04 UTC
Git commit 702e00471cf64e78bb064dbbd543dac161f937d3 by Toni Asensi Esteve.
Committed on 01/07/2020 at 21:33.
Pushed by asensi into branch 'master'.

Synchronizer: Fix the feature of excluding folders

FIXED: [ 364838 ] Folders are ignored in the exclude list of Synchronizer

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/15

M  +4    -2    krusader/Synchronizer/synchronizer.cpp

https://invent.kde.org/utilities/krusader/commit/702e00471cf64e78bb064dbbd543dac161f937d3