Synchronizer: Fix the feature of excluding folders

FIXED: [ 364838 ] Folders are ignored in the exclude list of Synchronizer
BUG: 364838

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/15